[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "task_manager"
version = "0.1.0"
description = "Gerenciador de tarefas simples"
readme = "readme.md"
requires-python = ">=3.8"
dependencies = []

[project.scripts]
tsk = "task_manager.cli:main"

[tool.setuptools]
py-modules = ['task_manager']

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-vv --cov-report=term-missing"
testpaths = ["tests", "complete_tests"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 79

[project.optional-dependencies]
test = [
    "pytest==7.3.1",
    "pytest-cov==4.1.0",
]
all_test = [
    "coverage==7.2.6",
    "iniconfig==2.0.0",
    "packaging==23.1",
    "pluggy==1.0.0",
]
dev = [
    "task_manager[test]",
    "black==23.3.0",
    "flake8==6.0.0",
    "isort==5.12.0",
]
all_dev = [
    "task_manager[dev]",
    "task_manager[all_test]",
    "click==8.1.3",
    "mccabe==0.7.0",
    "pathspec==0.11.1",
    "platformdirs==3.5.1",
    "pycodestyle==2.10.0",
    "pyflakes==3.0.1",
]
